--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.11.0",
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.8.0",
-    "react-hook-form": "^7.48.0",
     "react-avatar": "^5.0.3",
     "react-csv": "^2.2.2",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.48.0",
     "react-select": "^5.8.0",
+    "recharts": "^2.8.0",
     "xlsx": "^0.18.5",
-    "fuse.js": "^7.0.0",
-    "@tanstack/react-table": "^8.11.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -34,8 +35,10 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "jest": "^30.0.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
