Create Supabase Edge Functions for CRM API

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-# API Configuration
-VITE_API_URL=http://localhost:3001/api
-VITE_AUTH_API_URL=http://localhost:3000/auth
+# Base configuration
+VITE_ENV=development
+
+# Supabase configuration for Edge Functions
+VITE_SUPABASE_URL=your-supabase-url
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # AI Providers
 VITE_OPENAI_API_KEY=sk-your-openai-key
 VITE_GEMINI_API_KEY=your-gemini-key
-
-# Environment
-VITE_ENV=development
