--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "supabase:login": "npx supabase login",
-    "supabase:link": "npx supabase link",
-    "supabase:deploy": "npx supabase functions deploy --project-ref your-project-ref",
-    "deploy:all-functions": "npm run supabase:deploy ai-enrichment && npm run supabase:deploy contacts && npm run supabase:deploy email-composer && npm run supabase:deploy email-analyzer && npm run supabase:deploy email-templates && npm run supabase:deploy personalized-messages && npm run supabase:deploy smart-bulk && npm run supabase:deploy smart-categorize && npm run supabase:deploy smart-enrichment && npm run supabase:deploy smart-qualify && npm run supabase:deploy smart-score"
+    "supabase:link": "echo 'Please run: npx supabase link --project-ref YOUR_PROJECT_REF (replace YOUR_PROJECT_REF with your actual project reference)'",
+    "supabase:deploy": "echo 'Please run: npx supabase functions deploy FUNCTION_NAME --project-ref YOUR_PROJECT_REF (replace with your actual project reference)'",
+    "deploy:instructions": "echo 'To deploy functions, first connect to Supabase with: npx supabase login && npx supabase link --project-ref YOUR_PROJECT_REF'"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
