--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-table": "^8.11.0",
+    "dotenv": "^17.2.0",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
