--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ts-jest": "^29.4.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "@supabase/supabase-cli": "^1.23.0",
+    "supabase": "^1.23.0",
     "vite": "^5.4.2"
   }
 }
