--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -43,11 +44,11 @@
     "globals": "^15.9.0",
     "jest": "^30.0.3",
     "postcss": "^8.4.35",
+    "supabase": "^1.23.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.4.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "supabase": "^1.23.0",
     "vite": "^5.4.2"
   }
 }
