--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-table": "^8.11.0",
+    "buffer": "^6.0.3",
     "dotenv": "^17.2.0",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.344.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-csv": "^2.2.2",
@@ -27,6 +29,7 @@
     "react-hook-form": "^7.48.0",
     "react-select": "^5.8.0",
     "recharts": "^2.8.0",
+    "util": "^0.12.5",
     "xlsx": "^0.18.5",
     "zustand": "^4.4.7"
   },
