--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
     "supabase:login": "npx supabase login",
     "supabase:link": "echo 'Please run: npx supabase link --project-ref YOUR_PROJECT_REF (replace YOUR_PROJECT_REF with your actual project reference)'",
     "supabase:deploy": "echo 'Please run: npx supabase functions deploy FUNCTION_NAME --project-ref YOUR_PROJECT_REF (replace with your actual project reference)'",
