--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -311,6 +311,10 @@ inspector_port = 8083
 # The Deno major version to use.
 deno_version = 1
 
+# Function-specific configurations
+[functions.ai-enrichment]
+verify_jwt = true
+
 # [edge_runtime.secrets]
 # secret_key = "env(SECRET_VALUE)"
 
