--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy:instructions": "echo 'To deploy functions, first connect to Supabase with: npx supabase login && npx supabase link --project-ref YOUR_PROJECT_REF'"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-table": "^8.11.0",
     "buffer": "^6.0.3",
@@ -28,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.0",
+    "react-popper": "^2.3.0",
     "react-select": "^5.8.0",
     "recharts": "^2.8.0",
     "util": "^0.12.5",
