--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy:instructions": "echo 'To deploy functions, first connect to Supabase with: npx supabase login && npx supabase link --project-ref YOUR_PROJECT_REF'"
   },
   "dependencies": {
+    "@originjs/vite-plugin-federation": "^1.4.1",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-table": "^8.11.0",
     "buffer": "^6.0.3",
