--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ VITE_SUPABASE_URL=your-supabase-url
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # AI Providers
+VITE_OPENAI_API_KEY=your-openai-api-key
+VITE_GEMINI_API_KEY=your-gemini-api-key
+VITE_ANTHROPIC_API_KEY=your-anthropic-api-key
