--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,6 @@
-# Base configuration
-VITE_ENV=development
+# Gemini API Configuration
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
-# Supabase configuration for Edge Functions
-VITE_SUPABASE_URL=your-supabase-url
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
-
-# AI Providers
-VITE_OPENAI_API_KEY=your-openai-api-key
-VITE_GEMINI_API_KEY=your-gemini-api-key
-VITE_ANTHROPIC_API_KEY=your-anthropic-api-key
+# Supabase Configuration (existing)
+VITE_SUPABASE_URL=your_supabase_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
