--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "deploy:instructions": "echo 'To deploy functions, first connect to Supabase with: npx supabase login && npx supabase link --project-ref YOUR_PROJECT_REF'"
   },
   "dependencies": {
-    "@originjs/vite-plugin-federation": "^1.4.1",
     "@floating-ui/dom": "^1.7.4",
     "@floating-ui/react": "^0.27.16",
+    "@google/generative-ai": "^0.24.1",
+    "@originjs/vite-plugin-federation": "^1.4.1",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-table": "^8.11.0",
     "buffer": "^6.0.3",
