--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-# Gemini API Configuration
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# OpenAI API Configuration
+OPENAI_API_KEY=your_openai_api_key_here
 
-# Supabase Configuration (existing)
-VITE_SUPABASE_URL=your_supabase_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# Supabase Configuration
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Optional: Google Maps API for enhanced geocoding
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Business Configuration
+COMPETITOR_COMPANIES=CompetitorCorp,RivalTech,MarketLeader
+REPUTABLE_COMPANIES=Microsoft,Google,Amazon,Apple,Meta
+VIP_COMPANIES=Fortune500,TechGiants,IndustryLeaders
