--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,17 @@
 [build]
-  publish = "dist"
-  functions = "netlify/functions"
+publish = "dist"
+functions = "netlify/functions"
+command = "npx vite build"
 
 [functions]
-  directory = "netlify/functions"
+directory = "netlify/functions"
 
 [[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+from = "/api/*"
+to = "/.netlify/functions/:splat"
+status = 200
 
 [[redirects]]
-  from = "/old-path"
-  to = "/new-path"
-  status = 301
+from = "/old-path"
+to = "/new-path"
+status = 301
