feat: Integrate Rube/Composio MCP tools into SmartCRM agent system
- Add MCP Adapter Service (src/services/mcpAdapter.ts)
  * Connect to Rube MCP server with health checks
  * Discover and cache available tools (Gmail, Calendar, Slack, etc.)
  * Convert MCP tools to OpenAI-compatible function format
  * Execute tools via MCP protocol with error handling
  * OAuth authentication flow management for external services
  * Automatic token refresh handling

- Extend Agent Framework (src/services/agentFramework.ts)
  * Modified buildTools() to include MCP tools alongside Netlify functions
  * Updated executeTool() to route MCP tool calls appropriately
  * Added isMCPTool() method for tool type detection

- Update Agent Metadata (supabase/seed_agent_metadata.sql)
  * Added gmail-send-email tool to AI SDR Agent
  * Added gmail-send-email + calendar-create-event to Meetings Agent
  * Added gmail-send-email + calendar-create-event to AI AE Agent
  * Updated agent instructions to mention new capabilities

- Configuration Updates (.env.example)
  * Added VITE_RUBE_MCP_SERVER_URL environment variable

- Testing (src/tests/mcpAdapter.test.ts)
  * Comprehensive test suite for MCP adapter functionality
  * Mock-based testing for connection, tool discovery, and execution

BREAKING CHANGES: None - MCP integration is additive and maintains backward compatibility

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 # Optional: Google Maps API for enhanced geocoding
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
+# MCP Server Configuration (for Rube/Composio integration)
+VITE_RUBE_MCP_SERVER_URL=http://localhost:3001
+
 # Business Configuration
 COMPETITOR_COMPANIES=CompetitorCorp,RivalTech,MarketLeader
 REPUTABLE_COMPANIES=Microsoft,Google,Amazon,Apple,Meta
