--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "netlify:deploy": "npx netlify deploy --prod",
     "netlify:deploy:preview": "npx netlify deploy --build",
     "test:functions": "node test-netlify-functions.js",
+    "test:agentmail": "node test-agentmail-webhook.js",
     "generate-gifs": "node scripts/generate-gifs.js",
     "rename-videos": "node scripts/rename-videos.js"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.77",
     "@floating-ui/dom": "^1.7.4",
     "@floating-ui/react": "^0.27.16",
     "@google/generative-ai": "^0.24.1",
+    "@netlify/functions": "^5.1.0",
     "@originjs/vite-plugin-federation": "^1.4.1",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-table": "^8.11.0",
+    "agentmail": "^0.1.8",
+    "agentmail-toolkit": "^0.1.36",
+    "ai": "^5.0.106",
     "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
