--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@originjs/vite-plugin-federation": "^1.4.1",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-table": "^8.11.0",
-    "agentmail": "^0.1.8",
+    "agentmail": "^0.1.9",
     "agentmail-toolkit": "^0.1.36",
     "ai": "^5.0.106",
     "buffer": "^6.0.3",
@@ -40,6 +40,7 @@
     "dotenv": "^17.2.0",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.344.0",
+    "openai": "^6.10.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
