feat: comprehensive AI enhancements, SDR improvements, and documentation updates
- Enhanced AI SDR agent functionality and configuration
- Added new email templates expansion documentation
- Updated GPT-5.2 integration guides
- Improved test coverage and removed obsolete tests
- Updated package dependencies and configuration
- Added new AI analytics and error tracking services
- Enhanced contact management and pipeline features

--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,8 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 URL=https://your-netlify-site.netlify.app
 
 # Note: Service role key should be set in Netlify environment variables only
-# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here-e 
+# AI Model Configuration (GPT-5.2 Upgrade)
+SMARTCRM_MODEL=gpt-5.2
+SMARTCRM_THINKING_MODEL=gpt-5.2-thinking
+SMARTCRM_FAST_MODEL=gpt-5.2-instant
