fix: correct import paths in Netlify functions to point to src/lib/
- Updated all Netlify functions to import from ../../src/lib/ instead of ../lib/
- Fixes bundling errors during Netlify deployment
- Ensures all functions can resolve their dependencies

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,9 @@ command = "npx vite build"
 [functions]
 directory = "netlify/functions"
 
+[dev]
+targetPort = 5174
+
 [[redirects]]
 from = "/api/*"
 to = "/.netlify/functions/:splat"
