--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^17.2.0",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.11",
     "openai": "^6.10.0",
     "process": "^0.11.10",
