--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ OPENAI_API_KEY=your_openai_api_key_here
 # AgentMail API Configuration
 AGENTMAIL_API_KEY=your_agentmail_api_key_here
 
-# Metorial Research API Configuration
+# Metorial MCP Server Configuration
+METORIAL_MCP_SERVER_URL=https://api.metorial.com
 METORIAL_API_KEY=your_metorial_api_key_here
 
 # Supabase Database Configuration
