--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ OPENAI_API_KEY=your_openai_api_key_here
 
 # AgentMail API Configuration
 AGENTMAIL_API_KEY=your_agentmail_api_key_here
+AGENTMAIL_DEFAULT_INBOX_ID=your_default_inbox_id_here
+AGENTMAIL_INBOX_DEAN=your_dean_inbox_id_here
+AGENTMAIL_INBOX_SARAH=your_sarah_inbox_id_here
+AGENTMAIL_INBOX_TECH=your_tech_inbox_id_here
+
+# SDR Assistant Configuration (optional - will be auto-created if not set)
+SDR_ASSISTANT_ID=your_openai_assistant_id_here
 
 # Metorial MCP Server Configuration
 METORIAL_MCP_SERVER_URL=https://api.metorial.com
@@ -19,7 +26,8 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 URL=https://your-netlify-site.netlify.app
 
 # Note: Service role key should be set in Netlify environment variables only
-# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here-e 
+# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
 # AI Model Configuration (GPT-5.2 Upgrade)
 SMARTCRM_MODEL=gpt-5.2
 SMARTCRM_THINKING_MODEL=gpt-5.2-thinking
